--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "start": "rollup -c -w --environment NODE_ENV:dev,PORT:8080",
-    "build:dev": "rollup -c -w --environment NODE_ENV:dev",
-    "build:prod": "rollup -c --environment NODE_ENV:prod",
-    "deploy": "npm run build:prod && rsync -avz dist/ aldebaran.uberspace.de:html/paradise-lost",
-    "test": "ava test"
+    "build:dev": "npm run validate && rollup -c -w --environment NODE_ENV:dev",
+    "build:prod": "npm run validate && rollup -c --environment NODE_ENV:prod",
+    "deploy": "npm run validate && npm run build:prod && rsync -avz dist/ aldebaran.uberspace.de:html/paradise-lost",
+    "validate": "node validate-data.js"
   },
   "author": "Marcel Schaeben",
   "license": "GPLv3",
@@ -18,10 +18,10 @@
     "leaflet": "^1.3.1",
     "leaflet-providers": "^1.1.17",
     "leaflet.markercluster": "^1.3.0",
-    "marked": "^0.3.17",
+    "marked": "^0.3.19",
     "typeface-playfair-display": "0.0.54",
-    "vue": "^2.5.13",
-    "vue-material": "^1.0.0-beta-7",
+    "vue": "^2.5.16",
+    "vue-material": "^1.0.0-beta-10.2",
     "vue-resource": "^1.3.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
@@ -29,10 +29,10 @@
   },
   "devDependencies": {
     "autoprefixer": "^7.2.4",
-    "ava": "^1.0.0-beta.3",
     "cssnano": "^3.10.0",
+    "d3-dsv": "^1.0.8",
     "postcss": "^6.0.16",
-    "rollup": "^0.57.0",
+    "rollup": "^0.57.1",
     "rollup-plugin-alias": "^1.4.0",
     "rollup-plugin-buble": "^0.18.0",
     "rollup-plugin-commonjs": "^8.3.0",
@@ -48,6 +48,6 @@
     "rollup-plugin-serve": "^0.4.2",
     "rollup-plugin-uglify": "^3.0.0",
     "rollup-plugin-vue": "^3.0.0",
-    "vue-template-compiler": "^2.5.13"
+    "vue-template-compiler": "^2.5.16"
   }
 }
