--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
   "scripts": {
     "start": "rollup -c -w --environment NODE_ENV:dev,PORT:8080",
     "build:dev": "npm run validate && rollup -c -w --environment NODE_ENV:dev",
-    "build:prod": "npm run validate && rollup -c --environment NODE_ENV:prod",
-    "deploy": "npm run validate && npm run build:prod && rsync -avz dist/ aldebaran.uberspace.de:html/paradise-lost",
+    "build:prod": "rollup -c --environment NODE_ENV:prod",
+    "deploy": "npm run build:prod && rsync -avz dist/ aldebaran.uberspace.de:html/paradise-lost",
     "validate": "node validate-data.js"
   },
   "author": "Marcel Schaeben",
   "license": "GPLv3",
   "dependencies": {
     "Leaflet.vector-markers": "ajf2/Leaflet.vector-markers#90ef9b81a87611fc1ef20eac8c4f5581287a4d7f",
+    "animate.css": "^3.6.1",
     "d3": "^4.13.0",
     "leaflet": "^1.3.1",
     "leaflet-providers": "^1.1.17",
@@ -31,8 +32,10 @@
     "autoprefixer": "^7.2.4",
     "cssnano": "^3.10.0",
     "d3-dsv": "^1.0.8",
+    "leaflet.sync": "^0.2.4",
     "postcss": "^6.0.16",
-    "rollup": "^0.57.1",
+    "poststylus": "^1.0.0",
+    "rollup": "^0.62.0",
     "rollup-plugin-alias": "^1.4.0",
     "rollup-plugin-buble": "^0.18.0",
     "rollup-plugin-commonjs": "^8.3.0",
@@ -43,11 +46,15 @@
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.1.0",
     "rollup-plugin-node-resolve": "^3.0.2",
+    "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-replace": "^2.0.0",
     "rollup-plugin-scss": "^0.4.0",
     "rollup-plugin-serve": "^0.4.2",
+    "rollup-plugin-stylus-css-modules": "^1.5.0",
     "rollup-plugin-uglify": "^3.0.0",
     "rollup-plugin-vue": "^3.0.0",
-    "vue-template-compiler": "^2.5.16"
+    "stylus": "^0.54.5",
+    "vue-template-compiler": "^2.5.16",
+    "vuetify": "^1.0.19"
   }
 }
