--- a/src/data/map-config.json
+++ b/src/data/map-config.json
@@ -2,7 +2,7 @@
 	"baseLayers": [
 		{ 
 			"name": "World Terrain",
-			"id": "Esri.WorldTerrain" 
+			"id": "Esri.WorldTerrain"
 		},
 		{
 			"name": "Stamen Terrain",
@@ -15,6 +15,29 @@
 		{
 			"name": "Nat Geo",
 			"id": "Esri.NatGeoWorldMap"
+		},
+		{
+			"name": "CartoDB Voyager",
+			"id": "CartoDB.VoyagerNoLabels"
+		},
+		{
+			"name": "CartoDB Positron",
+			"id": "CartoDB.PositronNoLabels"
+		},
+		{
+			"name": "Geoportail France",
+			"id": "GeoportailFrance.maps"
+		},
+		{
+			"name": "Thunderforest Pioneer",
+			"id": "Thunderforest.Pioneer",
+			"params": {
+				"apikey": "506561be1ca2442b85f2be9a931bfc44"
+			}
+		},
+		{
+			"name": "OpenStreetMap.DE",
+			"id": "OpenStreetMap.DE"
 		}
 	],
 
