--- a/package.json
+++ b/package.json
@@ -13,48 +13,53 @@
   "author": "Marcel Schaeben",
   "license": "GPLv3",
   "dependencies": {
-    "Leaflet.vector-markers": "ajf2/Leaflet.vector-markers#90ef9b81a87611fc1ef20eac8c4f5581287a4d7f",
-    "animate.css": "^3.6.1",
+    "Leaflet.vector-markers": "github:ajf2/Leaflet.vector-markers#90ef9b81a87611fc1ef20eac8c4f5581287a4d7f",
+    "animate.css": "^3.7.0",
     "d3": "^4.13.0",
-    "leaflet": "^1.3.1",
-    "leaflet-providers": "^1.1.17",
-    "leaflet.markercluster": "^1.3.0",
+    "leaflet": "^1.4.0",
+    "leaflet-providers": "^1.5.0",
+    "leaflet.markercluster": "^1.4.1",
     "marked": "^0.3.19",
     "typeface-playfair-display": "0.0.54",
-    "vue": "^2.5.16",
+    "vue": "^2.6.8",
     "vue-material": "^1.0.0-beta-10.2",
-    "vue-resource": "^1.3.6",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
+    "vue-resource": "^1.5.1",
+    "vue-router": "^3.0.2",
+    "vuex": "^3.1.0",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
-    "autoprefixer": "^7.2.4",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "autoprefixer": "^9.4.9",
+    "babel-cli": "^6.26.0",
     "cssnano": "^3.10.0",
-    "d3-dsv": "^1.0.8",
+    "d3-dsv": "^1.1.1",
     "leaflet.sync": "^0.2.4",
-    "postcss": "^6.0.16",
+    "postcss": "^7.0.14",
     "poststylus": "^1.0.0",
-    "rollup": "^0.62.0",
-    "rollup-plugin-alias": "^1.4.0",
-    "rollup-plugin-buble": "^0.18.0",
-    "rollup-plugin-commonjs": "^8.3.0",
+    "rollup": "^1.4.1",
+    "rollup-plugin-alias": "^1.5.1",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-buble": "^0.19.0",
+    "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-copy": "^0.2.3",
     "rollup-plugin-dsv": "^1.2.0",
-    "rollup-plugin-json": "^2.3.0",
-    "rollup-plugin-livereload": "^0.6.0",
+    "rollup-plugin-json": "^3.1.0",
+    "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
-    "rollup-plugin-node-globals": "^1.1.0",
-    "rollup-plugin-node-resolve": "^3.0.2",
-    "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-replace": "^2.0.0",
-    "rollup-plugin-scss": "^0.4.0",
-    "rollup-plugin-serve": "^0.4.2",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-scss": "^1.0.1",
+    "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-stylus-css-modules": "^1.5.0",
-    "rollup-plugin-uglify": "^3.0.0",
-    "rollup-plugin-vue": "^3.0.0",
+    "rollup-plugin-uglify": "^6.0.2",
+    "rollup-plugin-vue": "^4.7.2",
     "stylus": "^0.54.5",
-    "vue-template-compiler": "^2.5.16",
-    "vuetify": "^1.0.19"
+    "vue-template-compiler": "^2.6.8",
+    "vuetify": "^1.5.4",
+    "xslt": "^0.9.1"
   }
 }
