--- a/map-config.json
+++ b/map-config.json
@@ -57,25 +57,25 @@
 	],
 	"colorSchemes": [
 		{
-			"good": "#4169e1",
-			"bad": "#b22222",
-			"neutral": "#555555",
-			"genesis": "green",
-			"bible": "#7e7156"
-		},
-		{
 			"good": "#66c2a5",
 			"bad": "#fc8d62",
 			"neutral": "#8da0cb",
-			"genesis": "green",
-			"bible": "#7e7156"
+			"genesis": "#c994c7",
+			"bible": "#f5f5f5"
+		},
+		{
+			"good": "#4169e1",
+			"bad": "#b22222",
+			"neutral": "#555555",
+			"genesis": "#c994c7",
+			"bible": "#f5f5f5"
 		},
 		{
 			"good": "#91bfdb",
 			"bad": "#fc8d59",
 			"neutral": "#ffffbf",
-			"genesis": "green",
-			"bible": "#7e7156"
+			"genesis": "#c994c7",
+			"bible": "#f5f5f5"
 		}
 	]
 }
