--- a/map-config.json
+++ b/map-config.json
@@ -15,6 +15,10 @@
 		{
 			"name": "Geoportail France",
 			"id": "GeoportailFrance.maps"
+		},
+		{
+			"name": "Stamen Terrain",
+			"id": "Stamen.Terrain"
 		}
 	],
 
