--- a/package.json
+++ b/package.json
@@ -17,51 +17,50 @@
     "Leaflet.vector-markers": "github:ajf2/Leaflet.vector-markers#90ef9b81a87611fc1ef20eac8c4f5581287a4d7f",
     "animate.css": "^3.7.0",
     "d3": "^4.13.0",
-    "leaflet": "^1.4.0",
-    "leaflet-providers": "^1.5.0",
+    "leaflet": "^1.5.1",
+    "leaflet-providers": "^1.7.0",
     "leaflet.markercluster": "^1.4.1",
     "marked": "^0.3.19",
     "strip-bom": "^3.0.0",
     "typeface-playfair-display": "0.0.54",
-    "vue": "^2.6.8",
-    "vue-material": "^1.0.0-beta-10.2",
+    "vue": "^2.6.10",
     "vue-resource": "^1.5.1",
-    "vue-router": "^3.0.2",
-    "vuex": "^3.1.0",
+    "vue-router": "^3.0.6",
+    "vuetify": "^1.5.14",
+    "vuex": "^3.1.1",
     "vuex-router-sync": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.3.4",
-    "@babel/preset-env": "^7.3.4",
-    "autoprefixer": "^9.4.9",
+    "@babel/core": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
+    "autoprefixer": "^9.5.1",
     "babel-cli": "^6.26.0",
     "cssnano": "^3.10.0",
     "d3-dsv": "^1.1.1",
     "leaflet.sync": "^0.2.4",
-    "postcss": "^7.0.14",
+    "postcss": "^7.0.16",
     "poststylus": "^1.0.0",
-    "rollup": "^1.4.1",
+    "rollup": "git+https://github.com/passcod/rollup.git",
     "rollup-plugin-alias": "^1.5.1",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-buble": "^0.19.0",
-    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-commonjs": "^9.3.4",
     "rollup-plugin-copy": "^0.2.3",
     "rollup-plugin-dsv": "^1.2.0",
     "rollup-plugin-json": "^3.1.0",
     "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-globals": "^1.4.0",
-    "rollup-plugin-node-resolve": "^4.0.1",
+    "rollup-plugin-node-resolve": "^4.2.4",
     "rollup-plugin-postcss": "^2.0.3",
-    "rollup-plugin-replace": "^2.1.0",
+    "rollup-plugin-replace": "^2.2.0",
     "rollup-plugin-scss": "^1.0.1",
     "rollup-plugin-serve": "^1.0.1",
     "rollup-plugin-stylus-css-modules": "^1.5.0",
     "rollup-plugin-uglify": "^6.0.2",
-    "rollup-plugin-vue": "^4.7.2",
+    "rollup-plugin-vue": "^5.0.0",
     "stylus": "^0.54.5",
-    "vue-template-compiler": "^2.6.8",
-    "vuetify": "^1.5.4",
-    "xlsx": "^0.14.1"
+    "vue-template-compiler": "^2.6.10",
+    "xlsx": "^0.14.3"
   }
 }
